<resources>
    <string name="app_name">WaterApp</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello">TODO</string>
    <string name="hello1">TODO</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="Enter">TODO</string>
    <string name="hellowater">TODO</string>
    <string name="drink_up">Drink Up!</string>
    <string name="buttonblock">TODO</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="InfoButton">TODO</string>
    <string name="SettingBUtton">TODO</string>
    <string name="settings">Settings</string>
    <string name="why_water">Why Water?</string>
    <string name="bluetooth_device">Bluetooth Device</string>
    <string name="cellular_data">Cellular Data</string>
    <string name="share_location">Share Location</string>
    <string name="notifications">Notifications</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="textview">TextView</string>
    <string name="textview5">TextView</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="this_will_help_us_get_a_better_reading_of_how_much_water_to_drink_sunny_days_can_dehydrate_you_fast">This will help us get a better reading of how much water to drink. Sunny days can dehydrate you fast!</string>
    <string name="enter_your_state">Enter your state</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="next">Next</string>
    <string name="water_is_a_key_ingredient_in_maintaining_a_healthy_body_drinking_water_prevents_dehydration_which_can_cause_unclear_thinking_changes_in_mood_your_body_to_overheat_and_other_unwanted_issues">Water is a key ingredient in maintaining a healthy body. Drinking water prevents dehydration, which can cause unclear thinking, changes in mood, your body to overheat and other unwanted issues.</string>
    <string name="lubricates_and_cushion_joints">Lubricates and cushion joints</string>
    <string name="protect_your_spinal_cord_and_other_sensitive_tissues">Protect your spinal cord and other sensitive tissues</string>
    <string name="gets_rid_of_waste_through_urination_perspiration_and_bowel_movements">Gets rid of waste through urination, perspiration and bowel movements</string>
    <string name="water_helps_your_body">Water helps your body:</string>
    <string name="helps_maintain_normal_temperature">Helps maintain normal temperature</string>
    <string name="https_www_cdc_gov_healthyweight_healthy_eating_water_and_healthier_drinks_html">https://www.cdc.gov/healthyweight/healthy_eating/water-and-healthier-drinks.html</string>
    <string name="daily_h20_intake">Daily H20 Intake</string>
    <string name="tap_the_pitcher_to_fill_your_progress">Tap the pitcher to fill your progress!</string>
    <string name="worked_out">Worked Out?</string>
    <string name="hint">hint</string>
    <string name="time_in_minutes">Time in Minutes</string>
    <string name="heavy_body_weight_lifting_calisthenics">Heavy (Body, Weight Lifting, Calisthenics)</string>
    <string name="moderate_jogging_swimming_cycling">Moderate (Jogging, Swimming, Cycling)</string>
    <string name="how_long_was_the_workout">How long was the workout?</string>
    <string name="how_was_your_workout_let_s_see_what_changes_we_need_to_make_to_your_water_intake_check_all_that_may_apply">How was your workout? Let\'s see what changes we need to make to your water intake! (Check all that may apply)</string>
    <string name="light_walking_yoga_pilates">Light ( Walking, Yoga, Pilates)</string>
    <string name="time_in_minutesw">Time in minutes</string>
    <string name="weather">Weather</string>
    <string name="city_placeholder">City: Placeholder</string>
    <string name="temp">##</string>
    <string name="you_will_need_to_drink_x_more_cups_of_water_for_today">You will need to drink X more cups of water for today!</string>
</resources>