<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waterbg"
    tools:context=".DailyProgress">

    <TextView
        android:id="@+id/NameView"
        android:layout_width="197dp"
        android:layout_height="113dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="104dp"
        android:text="@string/textview1"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/WeightView"
        android:layout_width="197dp"
        android:layout_height="113dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="152dp"
        android:text="@string/textview2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AgeView" />

    <TextView
        android:id="@+id/AgeView"
        android:layout_width="197dp"
        android:layout_height="113dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="44dp"
        android:text="@string/textview3"
        app:layout_constraintBottom_toTopOf="@+id/WeightView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameView" />

    <ImageButton
        android:id="@+id/InfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/SettingButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        android:contentDescription="@string/InfoButton" />

    <ImageButton
        android:id="@+id/SettingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/SettingBUtton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />
</androidx.constraintlayout.widget.ConstraintLayout>